添加ship类，及ship.bmp

--- a/学习笔记.md
+++ b/学习笔记.md
@@ -123,3 +123,11 @@ name = input('please enter your name:')
       print(squares)
       ```
 
+### if语句
+   - if
+   - if else
+   - if elif else
+   - if elif elif ... elif else  #使用多个elif
+
+### 类
+
